--- a/index.html
+++ b/index.html
@@ -3,20 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>Tic Tac Toe</title>
-    <link type='text/css' rel='stylesheet' href="styles.css" />
+    <link rel='stylesheet' type='text/css' href="styles.css" />
   </head>
   <body>
-    <div class="x-line1">
+    <div class="grid-container">
+      <div class="grid">
+        <label for='i1'></label>
+        <input type='button' id="i1" onclick="getValue();" />
+      </div>
+      <div class="grid">
 
-    </div>
-    <div class="x-line2">
+      </div>
+      <div class="grid">
 
-    </div>
-    <div class="y-line1">
+      </div>
+      <div class="grid">
 
-    </div>
-    <div class="y-line2">
+      </div>
+      <div class="grid">
 
+      </div>
+      <div class="grid">
+
+      </div>
+      <div class="grid">
+
+      </div>
+      <div class="grid">
+
+      </div>
+      <div class="grid">
+
+      </div>
     </div>
     <div id='x'>
 
@@ -24,6 +42,10 @@
     <div id='o'>
 
     </div>
+    <!-- <form class='form'>
+      <label for="">X or O:</label>
+      <input type="text" id="name" name="user_name">
+    </form> -->
     <script type="text/javascript" src="jquery-1.8.3.js"></script>
     <script type="text/javascript"></script>
   </body>
