Not really well done but kinda tic-tac-toe

--- a/index.html
+++ b/index.html
@@ -6,47 +6,37 @@
     <link rel='stylesheet' type='text/css' href="styles.css" />
   </head>
   <body>
-    <div class="grid-container">
+    <h1>Play a game of Tic-Tac-Toe!</h1>
+    <div class='container'>
       <div class="grid">
-        <label for='i1'></label>
-        <input type='button' id="i1" onclick="getValue();" />
+          <input type='button' />
       </div>
       <div class="grid">
-
+        <input type='button' />
       </div>
       <div class="grid">
-
+        <input type='button' />
       </div>
       <div class="grid">
-
+        <input type='button' />
       </div>
       <div class="grid">
-
+        <input type='button' />
       </div>
       <div class="grid">
-
+        <input type='button' />
       </div>
       <div class="grid">
-
+        <input type='button' />
       </div>
       <div class="grid">
-
+        <input type='button' />
       </div>
       <div class="grid">
-
+        <input type='button' />
       </div>
     </div>
-    <div id='x'>
-
-    </div>
-    <div id='o'>
-
-    </div>
-    <!-- <form class='form'>
-      <label for="">X or O:</label>
-      <input type="text" id="name" name="user_name">
-    </form> -->
-    <script type="text/javascript" src="jquery-1.8.3.js"></script>
-    <script type="text/javascript"></script>
+    <script src="js/jquery-1.11.3.min.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
