Change a few things

--- a/index.html
+++ b/index.html
@@ -9,34 +9,34 @@
     <h1>Play a game of Tic-Tac-Toe!</h1>
     <div class='container'>
       <div class="grid" id="tl">
-          <input type='button' />
+        
       </div>
       <div class="grid" id='tm'>
-        <input type='button' />
+
       </div>
       <div class="grid" id='tr'>
-        <input type='button' />
+
       </div>
       <div class="grid" id='ml'>
-        <input type='button' />
+
       </div>
       <div class="grid" id='mm'>
-        <input type='button' />
+
       </div>
       <div class="grid" id='mr'>
-        <input type='button' />
+
       </div>
       <div class="grid" id='bl'>
-        <input type='button' />
+
       </div>
       <div class="grid" id='bm'>
-        <input type='button' />
+
       </div>
       <div class="grid" id='br'>
-        <input type='button' />
+
       </div>
     </div>
     <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="main.js"></script>
+    <script src="second.js"></script>
   </body>
 </html>
