--- a/index.html
+++ b/index.html
@@ -2,41 +2,40 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Tic Tac Toe</title>
-    <link rel='stylesheet' type='text/css' href="styles.css" />
+    <title>Tic-Tac-Toe</title>
+    <link type="text/css" rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Play a game of Tic-Tac-Toe!</h1>
-    <div class='container'>
-      <div class="grid" id="tl">
+    <div class="container">
+      <div class="box" id="tl">
 
       </div>
-      <div class="grid" id='tm'>
+      <div class="box" id="tm">
 
       </div>
-      <div class="grid" id='tr'>
+      <div class="box" id="tr">
 
       </div>
-      <div class="grid" id='ml'>
+      <div class="box" id="ml">
 
       </div>
-      <div class="grid" id='mm'>
+      <div class="box" id="mm">
 
       </div>
-      <div class="grid" id='mr'>
+      <div class="box" id="mr">
 
       </div>
-      <div class="grid" id='bl'>
+      <div class="box" id="bl">
 
       </div>
-      <div class="grid" id='bm'>
+      <div class="box" id="bm">
 
       </div>
-      <div class="grid" id='br'>
+      <div class="box" id="br">
 
       </div>
     </div>
-    <script src="js/jquery-1.11.3.min.js"></script>
-    <script src="second.js"></script>
+    <script src="js/vendor/jquery-1.11.3.min.js"></script>
+    <script src="js/main.js"></script>
   </body>
 </html>
